[package]
name = "file_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.54"
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
winit = "0.29"
druid = "0.8.3"
im = "15.1"
druid-widget-nursery = "0.1.0"
dirs = "5.0"

[build-dependencies]
winres = "0.1"
